# DeDupeLab

./: CHANGELOG.md  GOVERNANCE.md  IMPLEMENTATION_STATUS.md  INSTALL.md  LICENSE  MANUAL.md  README.md  SCHEMAS.md  __init__.py  applier.py  cli.py  config.py  db.py  deduplab.yml  deleteme  deps.py  enviroment.py  exporter.py  nsfw_classifier.py  pyproject.toml  scanner.py  validator.py
Scratchbox/: gdrive_active_tree_head.txt  gdrive_audit_combined.txt  gdrive_migration_log.txt  gdrive_size_active.json  gdrive_size_after_migration.json  gdrive_size_archives.json  gdrive_tree.txt  run_rclone_debug_dryrun.out  run_rclone_debug_dryrun.sh  terminal_history_scanned.txt
dedupelab/: MANUAL.md  __init__.py  accelerator.py  applier.py  bootstrap.py  categorizer.py  cli.py  config.py  db.py  logger.py  meta_exporter.py  metrics.py  planner.py  rollback.py  scanner.py  validator.py
dedupelab/schemas/: deduplab_meta_v3.schema.json  deduplab_meta_v4.schema.json
docs/: README.md
tests/: test_import.py
