[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deduplab"
version = "6.4.0"  # SINGLE SOURCE OF TRUTH
description = "Autonomous caretaker for library deduplication and normalization with context-aware hashing."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Allaun" }]
keywords = ["deduplication", "file-management", "hashing", "archive", "nsfw-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Archiving",
]

[project.scripts]
deduplab = "deduplab.cli:main"

[project.optional-dependencies]
# Recommended dependencies for full functionality
full = [
    "jsonschema>=4.0.0",
    "tqdm>=4.60.0",
    "pandas>=1.3.0",
    "Pillow>=9.0.0",
    "psutil>=5.8.0"
]
# GPU acceleration (advanced users)
gpu = [
    "cudf>=22.0.0"
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "tomli>=2.0.0; python_version<'3.11'"
]

[tool.setuptools]
packages = ["deduplab"]

[tool.setuptools.package-data]
deduplab = ["schemas/*.json"]